--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -13863,8 +13863,8 @@ a.thumbnail:hover {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_progress-bars\.sass}line{font-family:\0000335}}
 .progress {
   overflow: hidden;
-  height: 18px;
-  margin-bottom: 18px;
+  height: 13px;
+  margin-top: 3px;
   background-color: #f6f6f6;
   background-image: -moz-linear-gradient(top, whitesmoke, #f9f9f9);
   background-image: -ms-linear-gradient(top, whitesmoke, #f9f9f9);
