--- a/website/site-static/sass/bootstrap/_progress-bars.sass
+++ b/website/site-static/sass/bootstrap/_progress-bars.sass
@@ -34,8 +34,8 @@
 // Outer container
 .progress
   overflow: hidden
-  height: 18px
-  margin-bottom: 18px
+  height: 13px
+  margin-top: 3px
   +gradient-vertical(#f5f5f5, #f9f9f9)
   +box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.1))
   +border-radius($baseRadiusMedium)
