--- a/website/apps/atracker/templates/atracker/templatetags/stats_for_object.html
+++ b/website/apps/atracker/templates/atracker/templatetags/stats_for_object.html
@@ -12,6 +12,9 @@
 	{% else %}
 	{{ type.title }}
 	{% endif %}{% endif %}{% endif %}
+    {% if not forloop.last %}
+    |&nbsp;
+    {% endif %}
 </span>
 
 </li>
