--- a/website/apps/alibrary/templates/alibrary/media/sidebar/context/_list.html
+++ b/website/apps/alibrary/templates/alibrary/media/sidebar/context/_list.html
@@ -10,14 +10,12 @@
                 <span class="clear"></span>
             </li> -->
             <!-- Menu element / Action -->
-            {% if user.is_authenticated %}
             <li class="action disabled selection_required selection_multiple selection_merge ">
-                <span class="left icon"> <a href="#" data-action="merge" data-ct="artist" title="Merge Selection">Merge
+                <span class="left icon"> <a href="#" data-action="merge" data-ct="media" title="Merge Selection">Merge
                     Selection</a> </span>
                 <span class="opt"></span>
                 <span class="clear"></span>
             </li>
-            {% endif %}
             <!-- Menu element / Action
             <li class="action disabled selection_required selection_any selection_play ">
                 <span class="left icon"> <a href="#release" title="Play Selection">Play Selection</a> </span>
