--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -101,6 +101,10 @@
                         <dd>{{ object.tempo }}</dd>
                     </dl>
 
+                    {% for section in object.sections %}
+                        {{ section.start }} | {{ section.duration }} | {{ section.confidence }}<br>
+                    {% endfor %}
+
                 </ul>
 
             </div>
