--- a/website/apps/alibrary/templates/alibrary/artist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/artist_detail.html
@@ -1,208 +1,221 @@
 {% extends "layout_base.html" %}
 
-{% load truncate i18n thumbnail arating_tags wiki_tags %}
+{% load truncate i18n thumbnail arating_tags wiki_tags spurl %}
 
 {% block heading %} <!-- heading / icon (large one) -->
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %} <!-- start: intra-module navigation -->
-<div id="modnav">
-	{% include "skeleton/modnav.html" %}
-</div>
-<!-- end: intra-module navigation -->
+    <div id="modnav">
+        {% include "skeleton/modnav.html" %}
+    </div>
+    <!-- end: intra-module navigation -->
 {% endblock %}
 
 {% block inner %}
-<div class="item_detail" style="">
+    <div class="item_detail" style="">
 
-	<section class="shaded">
-		<div class="row iteminfo release">
-			{% include "alibrary/artist/_detail_info.html" %}
-		</div>
-	</section>
+        <section class="shaded">
+            <div class="row iteminfo release">
+                {% include "alibrary/artist/_detail_info.html" %}
+            </div>
+        </section>
 
-	<div class="item_menu" id="item_menu">
-		<ul class="nav nav-tabs">
-			<li class="{%  if releases.object_list.count > 0 %}active{% endif %}">
-				<a href="#tracklist" data-toggle="tab">{% trans "Overview" %}</a>
-			</li>
-			<li class="{%  if releases.object_list.count < 1 and m_contrib > 1 %}active{% endif %}">
-				<a href="#contribution" data-toggle="tab">{% trans "Contributions" %} ({{ m_contrib.count }})</a>
-			</li>
-			<li>
-				<a href="#biography" data-toggle="tab">{% trans "Biography" %}</a>
-			</li>
-			<li>
-				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
-			</li>
-		</ul>
-	</div>
+        <div class="item_menu" id="item_menu">
+            <ul class="nav nav-tabs">
+                <li class="{% if releases.object_list.count > 0 %}active{% endif %}">
+                    <a href="#tracklist" data-toggle="tab">{% trans "Overview" %}</a>
+                </li>
+                <li class="{% if releases.object_list.count < 1 and m_contrib > 1 %}active{% endif %}">
+                    <a href="#contribution" data-toggle="tab">{% trans "Contributions" %} ({{ m_contrib.count }})</a>
+                </li>
+                <li>
+                    <a href="#biography" data-toggle="tab">{% trans "Biography" %}</a>
+                </li>
+                <li>
+                    <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                </li>
+            </ul>
+        </div>
 
-	<div class="clear"></div>
+        <div class="clear"></div>
 
-	<section class="tabbed item_inner">
+        <section class="tabbed item_inner">
 
-		<div class="tab-content">
+            <div class="tab-content">
 
-			<div class="tab-pane {%  if releases.object_list.count > 0 %}active{% endif %}" id="tracklist" class="topflop">
+                <div class="tab-pane {% if releases.object_list.count > 0 %}active{% endif %}" id="tracklist"
+                     class="topflop">
 
-				<!--
+                    <!--
 				<div class="pagination">
 				{{ media.render }}
 				</div>
 				-->
-				<section class="top">
+                    <section class="top">
 
-					<h2>{% trans "Top Tracks" %}</h2>
+                        <h2>{% trans "Top Tracks" %}</h2>
 
-					<div class="listview container medias s">
+                        <div class="listview container medias s">
 
-						<div class="list_header"></div>
+                            <div class="list_header"></div>
 
-						<div class="list_body">
+                            <div class="list_body">
 
-							{# for item in media.object_list #}
-							{% for item in m_top %}
-							{% include "alibrary/media/_list_item_foreign_xs.html" %}
-							{% empty %}
-							<p>
-								{% trans "Not enough ratings to calculate the 'Tops'." %}
-							</p>
-							{% endfor %}
-						</div>
-					</div>
+                                {# for item in media.object_list #}
+                                {% for item in m_top %}
+                                    {% include "alibrary/media/_list_item_foreign_xs.html" %}
+                                {% empty %}
+                                    <p>
+                                        {% trans "Not enough ratings to calculate the 'Tops'." %}
+                                    </p>
+                                {% endfor %}
+                            </div>
+                        </div>
 
-				</section>
+                    </section>
 
-				<section class="flop">
+                    <section class="flop">
 
-					<h2>{% trans "Flop Tracks" %}</h2>
+                        <h2>{% trans "Flop Tracks" %}</h2>
 
-					<div class="listview container medias s">
+                        <div class="listview container medias s">
 
-						<div class="list_header"></div>
+                            <div class="list_header"></div>
 
-						<div class="list_body">
+                            <div class="list_body">
 
-							{% for item in m_flop %}
-							{% include "alibrary/media/_list_item_foreign_xs.html" %}
-							{% empty %}
-							<p>
-								{% trans "Not enough ratings to calculate the 'Flops'." %}
-							</p>
-							{% endfor %}
-						</div>
-					</div>
+                                {% for item in m_flop %}
+                                    {% include "alibrary/media/_list_item_foreign_xs.html" %}
+                                {% empty %}
+                                    <p>
+                                        {% trans "Not enough ratings to calculate the 'Flops'." %}
+                                    </p>
+                                {% endfor %}
+                            </div>
+                        </div>
 
-				</section>
+                    </section>
 
-				<!--
+                    <!--
 				<div class="pagination">
 				{{ releases.render }}
 				</div>
 				-->
 
-				<section class="flop">
+                    <section class="flop">
+                        {% url alibrary-release-list as release_list %}
 
-					<h2>{% trans "Releases" %}</h2>
+                        <h2>
+                            {% trans "Releases" %}
+                            <span class="pull-right">
+                                <a href="{% spurl path=release_list query="artist={{ object.slug }}" %}">
+                                    <i class="icon-chevron-sign-right"></i>
+                                    {% trans "Show all releases by" %} {{ object.name }}
+                                </a>
+                            </span>
+                        </h2>
 
-					<div class="listview container releases inner m">
+                        <div class="listview container releases inner m">
 
-						<div class="list_header"></div>
+                            <div class="list_header"></div>
 
-						<div class="list_body">
+                            <div class="list_body">
 
-							{% for item in releases.object_list %}
-							{% include "alibrary/release/list_item_m.html" %}
-							{% endfor %}
-						</div>
-					</div>
+                                {% for item in releases.object_list %}
+                                    {% include "alibrary/release/list_item_m.html" %}
+                                {% endfor %}
+                            </div>
+                        </div>
 
-				</section>
+                    </section>
 
-			</div>
+                </div>
 
-			<div class="tab-pane" id="history">
+                <div class="tab-pane" id="history">
 
-				<section class="history">
-					
-					<h2>{% trans "Edit history" %}</h2>
-					
-					{% include "alibrary/element/_object_history.html" %}
-				</section>
+                    <section class="history">
 
-			</div>
+                        <h2>{% trans "Edit history" %}</h2>
 
-			<div class="tab-pane {%  if releases.object_list.count < 1 and m_contrib > 1 %}active{% endif %}" id="contribution">
+                        {% include "alibrary/element/_object_history.html" %}
+                    </section>
 
-				<section class="contribution">
+                </div>
 
-					<h2>{% trans "Appears on" %}</h2>
+                <div class="tab-pane {% if releases.object_list.count < 1 and m_contrib > 1 %}active{% endif %}"
+                     id="contribution">
 
-					<div class="listview container medias s">
+                    <section class="contribution">
 
-						<div class="list_header"></div>
+                        <h2>{% trans "Appears on" %}</h2>
 
-						<div class="list_body">
+                        <div class="listview container medias s">
 
-							{% with highlight=object extended=1 %}
-							{% for item in m_contrib %}
-							{% include "alibrary/media/_list_item_foreign_xs.html" %}
-							{% endfor %}
-							{% endwith %}
-						</div>
-					</div>
+                            <div class="list_header"></div>
 
-				</section>
+                            <div class="list_body">
 
-			</div>
+                                {% with highlight=object extended=1 %}
+                                    {% for item in m_contrib %}
+                                        {% include "alibrary/media/_list_item_foreign_xs.html" %}
+                                    {% endfor %}
+                                {% endwith %}
+                            </div>
+                        </div>
 
-			<div class="tab-pane" id="biography">
-				<section class="description">
-					<h2>{% trans "Artist description" %}</h2>
-					<div class="description markdown padded-h">
-						{% wikify object.biography %}
-					</div>
+                    </section>
 
-				</section>
+                </div>
 
-				{% if object.relations.generic.count > 0 %}
-				<section class="relations">
-					<h2>{% trans "More relations" %}</h2>
-					<ul class="unstyled">
-						{% for relation in object.relations.generic %}
-						<li>
-							<a href="{{ relation.url }}" class="skip-external" title="Show on {{ relation.url }}">{{ relation.url }}</a>
-						</li>
+                <div class="tab-pane" id="biography">
+                    <section class="description">
+                        <h2>{% trans "Artist description" %}</h2>
 
-						{% endfor %}
-					</ul>
+                        <div class="description markdown padded-h">
+                            {% wikify object.biography %}
+                        </div>
 
-				</section>
-				{% endif %}
+                    </section>
 
-			</div>
+                    {% if object.relations.generic.count > 0 %}
+                        <section class="relations">
+                            <h2>{% trans "More relations" %}</h2>
+                            <ul class="unstyled">
+                                {% for relation in object.relations.generic %}
+                                    <li>
+                                        <a href="{{ relation.url }}" class="skip-external"
+                                           title="Show on {{ relation.url }}">{{ relation.url }}</a>
+                                    </li>
 
-			<div class="tab-pane" id="broadcasts">
-				...
-			</div>
+                                {% endfor %}
+                            </ul>
 
-		</div>
+                        </section>
+                    {% endif %}
 
-	</section>
+                </div>
 
-	<section class="comments on-site">
-		{% include "element/chat/_object_comments.html" %}
-	</section>
+                <div class="tab-pane" id="broadcasts">
+                    ...
+                </div>
 
-</div>
+            </div>
+
+        </section>
+
+        <section class="comments on-site">
+            {% include "element/chat/_object_comments.html" %}
+        </section>
+
+    </div>
 
 {% endblock %}
 
 {% block sidebar %}
-{% include "alibrary/artist/sidebar/_detail.html" %}
+    {% include "alibrary/artist/sidebar/_detail.html" %}
 {% endblock %}
