--- a/website/apps/alibrary/templates/alibrary/media/list_item_m.html
+++ b/website/apps/alibrary/templates/alibrary/media/list_item_m.html
@@ -1,6 +1,10 @@
 {% load thumbnail i18n truncate display_tags arating_tags spurl %}
 
-<div class="list_body_row selectable item artist view edit stream collect download" id="list_item_{{ item.pk }}" data-resource_uri="{{ item.get_api_url }}">
+<div class="list_body_row selectable item artist view edit stream collect download" id="list_item_{{ item.pk }}" data-resource_uri="{{ item.get_api_url }}"
+        style="background-image: url({{ item.get_waveform_url }}); background-size: 830px 63px;"
+
+        >
+
 
 	<div class="list_body_item c1 image_center_bg" {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 54x54 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 		<ul class="unstyled">
